--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 csv = "1.2.0"
 chrono = "0.4.23"
 dirs = "4.0"
+regex = "1.7.2"
 duration-string = "0.3"
 xcb = { version = "1.2.0", features = ["screensaver"] }
